--- a/CSS/estilogaleria.css
+++ b/CSS/estilogaleria.css
@@ -6,7 +6,7 @@
 	
 	padding-left: 5%;
     padding-top: 5%;
-	padding-bottom: 1%;
+	/*padding-bottom: 1%;*/
 	padding-right: 5%;
 	display: flex;
 	flex-direction: column;
@@ -24,7 +24,10 @@ h1 {
 
 /*CAROUSEL*/
 .carousel {   
-	padding: 50px; 
+	/*padding: 50px; */
+	padding-bottom: 5%;
+	padding-left: 50px;
+	padding-right: 50px;
   }
   .carousel__contenedor {
 	position: relative;  
